# Lodestar

./: .gitignore  .gitmodules  6_d_o_f_euler_8cpp.html  6_d_o_f_euler_8cpp.js  6_d_o_f_euler_8cpp__incl.map  6_d_o_f_euler_8cpp__incl.md5  CMakeLists.txt  CNAME  LICENSE  README.md  _adaptive_backward_difference_8hpp_source.html  _algebraic_operators_8hpp_source.html  _algebraic_riccati_equation_8hpp_source.html  _always_false_8hpp_source.html  _any_8hpp_source.html  _array_stack_8hpp_source.html  _backward_difference_8hpp_source.html  _basic_c_l_i_8hpp_source.html  _bilinear_transformation_8hpp_source.html  _bin_op_check_8hpp_source.html  _block_8hpp_source.html  _block_base_8hpp_source.html  _block_pack_8hpp_source.html  _block_proto_8hpp_source.html  _block_traits_8hpp_source.html  _block_type_8hpp_source.html  _block_utilities_8hpp_source.html  _bogacki_shampine_8hpp_source.html  _buffer_block_8hpp_source.html  _butcher_tableau_8hpp_source.html  _car_demo_8hpp_source.html  _compile_time_qualifiers_8hpp_source.html  _conjunction_8hpp_source.html  _constant_block_8hpp_source.html  _continuous_sampled_e_k_f_8hpp_source.html  _converter_block_8hpp_source.html  _deadzone_block_8hpp_source.html  _delay_block_8hpp_source.html  _demangled_type_8hpp_source.html  _demux_block_8hpp_source.html  (+1533 more)
.github/workflows/: deploy-doxygen.yml  main.yml
Lodestar/: GlobalConstants.hpp  LodestarConfig.hpp  LodestarConfig.hpp.in
Lodestar/analysis/: BilinearTransformation.cpp  BilinearTransformation.hpp  LinearSystemInverse.cpp  LinearSystemInverse.hpp  ZeroOrderHold.cpp  ZeroOrderHold.hpp
Lodestar/aux/: AlgebraicOperators.hpp  AlwaysFalse.hpp  Any.hpp  ArrayStack.hpp  BinOpCheck.hpp  CompileTimeQualifiers.hpp  Conjunction.hpp  DemangledType.cpp  DynamicData.hpp  DynamicDataTypes.cpp  Indices.hpp  Pack.hpp  TemplateTools.hpp  TemplateTraits.hpp
Lodestar/blocks/: Block.hpp  BlockBase.hpp  BlockPack.cpp  BlockPack.hpp  BlockProto.hpp  BlockTraits.hpp  BlockType.hpp  BlockUtilities.hpp  DifferentiatorBlock.hpp  Signal.cpp  Signal.hpp  SignalBase.cpp  SignalBase.hpp
Lodestar/cli/: BasicCLI.cpp  BasicCLI.hpp  ExecuteCommand.cpp  ExecuteCommand.hpp
Lodestar/control/: DiscreteLQR.cpp  DiscreteLQR.hpp  ModelPredictiveControl.cpp  ModelPredictiveControl.hpp  SampledPID.hpp
Lodestar/core/: Status.cpp  Status.hpp  StatusOr.hpp
Lodestar/data/: FastFourierTransform.cpp
Lodestar/filter/: ContinuousSampledEKF.cpp  ContinuousSampledEKF.hpp  DiscreteLQE.cpp  DiscreteLQE.hpp  SimpleMovingAverage.hpp
Lodestar/io/: EigenProtoIface.hpp  GiNaCProtoIface.hpp  NanopbWrapper.cpp  NanopbWrapper.hpp  ProtoTypeTrait.hpp  ProtoWrapper.hpp
Lodestar/primitives/: Integrator.hpp
Lodestar/symbolic/: OrdinaryDifferentialEquation.cpp  OrdinaryDifferentialEquation.hpp  SymbolicCodegen.cpp  SymbolicCodegen.hpp  SymbolicFunctions.cpp  SymbolicFunctions.hpp
Lodestar/synthesis/: AlgebraicRiccatiEquation.cpp  AlgebraicRiccatiEquation.hpp
Lodestar/systems/: DiscreteStateSpace.hpp  DiscreteSystem.hpp  StateSpace.hpp  SystemStateful.hpp  SystemStateless.hpp  TransferFunction.hpp
Lodestar/time/: Metronome.hpp  TimeDuration.hpp
cmake/config/: LodestarConfig.cmake
cmake/modules/: FindCLN.cmake  FindGiNaC.cmake  FindPackageHandleStandardArgs.cmake
doc/: Doxyfile  footer.html  ls.hpp
examples/: 6DOFEuler.cpp  6DOFQuaternion.cpp  CarDemo.cpp  CarDemo.hpp  LunarLanderDemo.cpp  LunarLanderDemo.hpp  TadpoleDemo.cpp  TadpoleDemo.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  (+82 more)
src/: LodestarErrorNames.hpp  LodestarErrors.hpp
src/analysis/: BilinearTransformation.cpp  BilinearTransformation.hpp  LinearSystemInverse.cpp  LinearSystemInverse.hpp  ZeroOrderHold.cpp  ZeroOrderHold.hpp
src/aux/: CompileTimeQualifiers.hpp  DemangledType.cpp  DemangledType.hpp  DynamicDataTypes.hpp  FunctionTraits.hpp  Indices.hpp  OperationTypes.hpp  PairUp.hpp  RecursionException.hpp  Repeat.hpp  Status.cpp  Status.hpp  StatusOr.hpp  TemplateTools.hpp  TemplateTraits.hpp  TypeName.hpp  UnitLiterals.hpp
src/block/: Block.hpp  BlockBase.hpp  StateSpaceBlock.cpp  StateSpaceBlock.hpp  Ticket.hpp
src/blocks/: Block.cpp  Block.hpp  BlockPack.cpp  BlockPack.hpp  BlockProto.cpp  BlockProto.hpp  BlockTraits.cpp  BlockTraits.hpp  BlockType.hpp  Signal.hpp  SignalBase.hpp
src/control/: DiscreteLQR.cpp  DiscreteLQR.hpp  FixedGain.cpp  FixedGain.hpp  ModelPredictiveControl.hpp  SampledPID.cpp  SampledPID.hpp
src/core/: Status.cpp  Status.hpp  StatusOr.hpp
src/data/: FastFourierTransform.cpp  FastFourierTransform.hpp
src/filter/: ContinuousSampledEKF.hpp  DiscreteLQE.cpp  DiscreteLQE.hpp  SimpleMovingAverage.h
src/io/: EigenProtoIface.cpp  EigenProtoIface.hpp  GiNaCProtoIface.cpp  ProtoIfaceABC.hpp  ProtoTypeTrait.hpp  ProtoWrapper.cpp  ProtoWrapper.hpp
tests/: TestAuxFunctions.hpp  TestMain.cpp  catchOnce.hpp
(+249 files in other folders)
